# afs-digitization

./: README.md  package-lock.json  pyproject.toml  run_local.py  web_digitizer.py
docs/: canonical_schema.md
financial_digitization/: __init__.py
financial_digitization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
financial_digitization/exporters/: excel_writer.py
financial_digitization/extractors/: adapters.py  audit_parser.py  pdf_tables.py
financial_digitization/linkers/: __init__.py  schedule_linker.py
financial_digitization/mappers/: semantic_mapper.py
financial_digitization/models/: contracts.py
financial_digitization/normalizers/: numeric.py
financial_digitization/pipelines/: classifier.py  job_runner.py  job_store.py
financial_digitization/schemas/1.0.0/: audit_report.schema.json  balance_sheet.schema.json  cash_flow.schema.json  common.schema.json  income_expenditure.schema.json  master_envelope.schema.json
financial_digitization/tests/: test_classifier_and_rules.py  test_job_runner_excel.py  test_new_engines.py  test_numeric.py  test_pdf_tables.py  test_schema_validator.py
financial_digitization/validators/: financial_rules.py  schema_validator.py
