[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-digitization"
version = "0.1.0"
description = "Deterministic ETL pipeline for financial statement digitization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["financial_digitization/tests"]
